# favink

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  pyproject.toml  tmp.py
favink/: __init__.py  fa.py
tests/: conftest.py  test_car.py  test_fa.py
