[tool.poetry]
name = "favink"
version = "0.1.0"
description = "Over-simple Python finite automata (finite-state machine) implementation"
authors = ["Konstantin V. <mail@k-vinogradov.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = { version = "*", allows-prereleases = true }
pytest = "^4.5"
pylint = "^2.3"
pydocstyle = "^3.0"
rope = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
