[tool.poetry]
name = "favink"
version = "2.0.0"
description = "Over-simple Python finite automata (finite-state machine) implementation"
authors = ["Konstantin V. <mail@k-vinogradov.ru>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/k-vinogradov/favink"
keywords = ["finite automata", "finite state machine", "state machine", "vink"]

[tool.poetry.dependencies]
python = "^3.5 || ^3.6"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases= true, python = "^3.6" }
pytest = "^4.5"
pylint = "^2.3"
pydocstyle = "^3.0"
rope = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
